added simple signup

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -6,3 +6,11 @@ db:
   username: "masha"
   dbname: "postgres"
   sslmode: "disable"
+redis:
+  host: "redis"
+  addr: "localhost"
+  port: 6379
+  dbname: "session"
+  password: "12345"
+session:
+  expiresAt: 1
