--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,9 +8,12 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+      redis:
+        condition: service_healthy
 
   postgres:
     image: postgres:latest
+    container_name: postgres
     environment:
       POSTGRES_DB: "postgres"
       POSTGRES_USER: "masha"
@@ -21,5 +24,16 @@ services:
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -U masha -d postgres" ]
       interval: 5s
+      timeout: 5s
+      retries: 5
+
+  redis:
+    image: redis:latest
+    container_name: redis
+    ports:
+      - "6379:6379"
+    healthcheck:
+      test: [ "CMD-SHELL", "redis-cli","ping" ]
+      interval: 10s
       timeout: 5s
       retries: 5
