--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,9 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
-      redis:
+      redis_users:
+        condition: service_healthy
+      redis_admin:
         condition: service_healthy
 
   postgres:
@@ -24,14 +26,27 @@ services:
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -U masha -d postgres" ]
       interval: 5s
+      timeout: 3s
+      retries: 5
+
+  redis_users:
+    image: redis:latest
+    container_name: users_sessions
+    ports:
+      - "6379:6379"
+    command: redis-server --requirepass test
+    healthcheck:
+      test: [ "CMD-SHELL", "redis-cli","ping" ]
+      interval: 10s
       timeout: 5s
       retries: 5
 
-  redis:
+  redis_admin:
     image: redis:latest
-    container_name: redis
+    container_name: admins_sessions
     ports:
-      - "6379:6379"
+      - "6380:6380"
+    command: redis-server --requirepass admin --port 6380
     healthcheck:
       test: [ "CMD-SHELL", "redis-cli","ping" ]
       interval: 10s
